# strace-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  example.py  noxfile.py  pyproject.toml
.github/workflows/: actions.yml  publish.yml
scripts/: fix_test_data.py
strace_parser/: __init__.py  json_transformer.py  parser.py
strace_parser/data/: grammar.txt
tests/: test_json.py  test_parser.py
tests/data/: samples.txt
