[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Chris Hunt"
author-email = "chrahunt@gmail.com"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]
dist-name = "strace-parser"
description-file = "README.md"
home-page = "https://github.com/chrahunt/strace-parser"
license = "MIT"
module = "strace_parser"
requires = [
    "lark-parser==0.7.8",
]
requires-python = ">=3.8.0"

[tool.flit.scripts]
strace-parser = "strace_parser.cli:main"
